--- a/heiheihei/maker/index.html
+++ b/heiheihei/maker/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>Platform 4 Makers</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 </head>
 <body>
-
+	
 </body>
 </html>
