--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
     </header>
     
-    <p>最近项目UED小组开了一次会，目的是想了解各个开发小组对前端的需求和目前现有项目的设计规范、技术要点。平台技术大牛在会议中透露了想要进行组件化web开发的想法，然后我就有了点想法。设计和开发之间，总是有那么点沟通或是理解上的差异，加上各自的知识面和约束都不尽相同，这就导致设计出来的UE、UI与开发成果有一定的出入。组件化能不能帮助解决这个问题？边写这篇小文边试验一下也是个不错的方法。</p>
+    <h1 id="reactjsinline-stylecss-module">此文废弃，ReactJS和inline style，css module就是我想要的</h1>
 
 
     <footer>
