增加一篇文章

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
     </header>
     
-    <p>最近做的一个移动端H5项目，需要嵌入某个移动APP中。</p>
+    <p>最近做的一个移动端H5项目，需要嵌入某个移动APP中。为了达到近似APP的效果，在H5页面顶部设计了标题栏和返回键。</p>
 
 
     <footer>
