使用gsap简单实现下拉上拉列表

--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 <header id="header">
-  <h1><a href="http://techctu.github.io/">Avalon</a></h1>
+  <h1><a href="https://techctu.github.io/">Avalon</a></h1>
 	<nav class="links">
     <!--
     <ul>
@@ -128,7 +128,7 @@
 
 						<!-- Intro -->
 						<section id="intro">
-  <a href="http://techctu.github.io/" class="logo"><img src="/images/logo.jpg" alt="" /></a>
+  <a href="https://techctu.github.io/" class="logo"><img src="/images/logo.jpg" alt="" /></a>
 	<header>
     <h2>Avalon</h2>
 		<p>反正不要钱 多少写一点
